Create student model with index and create implemented

--- a/app/views/students/index.html.haml
+++ b/app/views/students/index.html.haml
@@ -1,1 +1,8 @@
 %h1 Welcome to Student Picker
+
+= button_to "Pick Student", select_students_path, method: "get"
+
+%p Student List:
+%ul#students= render @students
+
+= link_to "Add Student", new_student_path
