Implement student pickable functionality needs additional testing

--- a/app/views/students/_student.html.haml
+++ b/app/views/students/_student.html.haml
@@ -1,2 +1,9 @@
 %li
   = student.name
+  %span
+  - if student.last_called.nil?
+    = "Student not called yet"
+  -else
+    = "last called "
+    = time_ago_in_words(student.last_called)
+    = "ago "
